style.css
/* Reset default margin and padding */
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

:root {
  --primary: 60 100% 50%;
  --background: 0 0% 0%;
  --foreground: 0 0% 100%;
}

html,
body {
  height: 100%;
  display: flex;
  flex-direction: column;
  margin: 0;
  padding: 0;
  width: 100%;
}

body {
  font-family: "Inter", Arial, sans-serif;
  text-align: center;
  padding: 20px;
  background-color: hsl(var(--background));
  background-image: linear-gradient(
    120deg,
    rgba(255, 255, 255, 0.1),
    rgba(0, 0, 0, 1)
  );
  /* background-size: 50px; */
  color: hsl(var(--foreground));
  -webkit-font-smoothing: antialiased;
}

.container {
  max-width: 1100px;
  margin: auto;
  background: none;
  /* backdrop-filter: blur(30px); */
  /* background-image: linear-gradient(
    120deg,
    rgba(255, 255, 255, 0.1),
    rgba(0, 0, 0, 1)
  ); */
  /* background-size: 30px; */
  padding: 20px;
  border-radius: 10px;
  box-sizing: border-box;
  /* box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1); */
  display: flex;
  flex-direction: column;
  flex: 1;
  align-items: center;
  justify-content: center;
  text-align: center;
  width: 98%;
}

h1,
h2 {
  font-size: 3.25rem; /* Equivalent to text-4xl */
  font-weight: 500; /* Equivalent to font-medium */
  letter-spacing: -0.02em; /* Equivalent to tracking-tight */
  line-height: 1.3;
  opacity: 1;
  transform: none;
}

h2 {
  font-size: 2.25rem;
  margin-bottom: 3rem;
}

/* Responsive styles */
@media (min-width: 640px) {
  /* sm breakpoint */
  h2 {
    font-size: 3rem; /* Equivalent to text-5xl */
  }
}

/* Style for the white-gradient span */
.white-gradient {
  display: inline-block;
  padding-bottom: 1.5rem; /* Equivalent to pb-6 */
  background: linear-gradient(
    to right,
    white,
    rgba(255, 255, 255, 0.5)
  ); /* Example gradient */
  -webkit-background-clip: text;
  color: transparent;
}

h2 {
  color: #555;
  font-size: 20px;
}

/* button {
  background-color: #007bff;
  color: white;
  border: none;
  padding: 10px 15px;
  font-size: 16px;
  cursor: pointer;
  margin: 10px;
  border-radius: 5px;
  transition: 0.3s;
} */

button {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 22px;
  font-size: 0.875rem; /* Equivalent to text-sm */
  font-weight: 500; /* Equivalent to font-medium */
  transition: all 0.15s cubic-bezier(0.4, 0, 0.2, 1);
  outline: none;
  height: 2.75rem; /* Equivalent to h-11 */
  padding: 0.5rem 2rem; /* Equivalent to px-4 py-2 */
  color: black;
  position: relative;
  background-color: hsl(var(--primary));
  --tw-text-opacity: 1;
  color: rgb(0 0 0 / var(--tw-text-opacity, 1));
  transition-property: all;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
  transition-duration: 0.15s;
  border: none;
}

/* button:hover {
  background-color: #0056b3;
} */

button:focus-visible {
  outline: none;
  box-shadow: 0 0 20px rgba(255, 191, 0, 0.3); /* Equivalent to focus-visible:ring-1 focus-visible:ring-ring */
}

button:disabled {
  pointer-events: none;
  opacity: 0.5;
}

button:hover {
  background-color: hsl(var(--primary));
}

.btn-group {
  display: flex;
  align-items: center;
  flex-wrap: nowrap;
  gap: 1rem;
}

.expression {
  font-size: 2.3em;
  margin: 20px 0 3rem;
  font-weight: bold;
  color: #fff;
}

input {
  padding: 10px;
  font-size: 1.5em;
  margin-bottom: 10px;
  outline: none;
  background: none;
  border: 0;
  color: #fff;
  border-bottom: 1px solid #ccc;
}

.result {
  font-weight: bold;
  margin-top: 10px;
}

#explanation {
  font-size: 14px;
  color: #666;
  margin-top: 30px;
}

#game-over {
  display: none;
}

#game-over p {
  margin-bottom: 2rem;
}

#score {
  font-weight: bold;
  font-size: 18px;
  color: #28a745;
}

.content-wrapper {
  backdrop-filter: blur(30px);
  background-image: linear-gradient(
    120deg,
    rgba(255, 255, 255, 0.1),
    rgba(0, 0, 0, 1)
  );
  border-radius: 25px;
  padding: 0.5rem 1rem;
  display: flex;
  align-items: center;
  justify-content: center;
  text-align: center;
}

.text-content {
  font-size: 0.8rem;
  margin: 0;
}

#game-container {
  border: 1px solid #272727;
  width: 100%;
  border-radius: 25px;
  padding: 2rem;
}

.header-game-container {
  display: flex;
  align-items: center;
  justify-content: space-between;
  margin-bottom: 2rem;
}
.footer-game-container {
  display: flex;
  align-items: center;
  justify-content: space-between;
  margin-top: 2rem;
}

#form-input {
  display: flex;
  align-items: center;
  justify-content: center;
}

@media (max-width: 640px) {
  .header-game-container,
  .footer-game-container,
  .btn-group,
  #form-input {
    flex-direction: column;
    gap: 23px;
    text-align: center;
  }
  .result {
    margin-top: 2rem;
  }
}

.footer-game-container #next,
.footer-game-container h2 {
  margin: 0;
}

#next {
  margin-top: 2rem;
  background: none;
  color: #a1a1a1;
  border: 1px solid #2b2b2b;
}

#guess {
  color: #b5b5b5;
}

/* Footer Styling */
footer {
  backdrop-filter: blur(30px);
  background-image: linear-gradient(
    120deg,
    rgba(187, 184, 184, 0.1),
    rgba(19, 19, 19, 0.5)
  );
  border-radius: 25px;
  color: white;
  text-align: center;
  padding: 15px 25px;
  font-size: 14px;
  width: max-content;
  position: relative;
  bottom: 0;
  margin: auto;
  font-size: 0.75rem;
}

footer a {
  color: #4db8ff;
  text-decoration: none;
}

/* footer a:hover {
  text-decoration: underline;
} */

